--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   ================================================== -->
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/skeleton.css">
-<link rel="stylesheet" href="css/layout.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/layout.css">
+
 
 <!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -38,7 +39,7 @@
   <header>
     <h1 class="remove-bottom eleven columns">Cats Ahoy!</h1>
     <form action="" class="five columns" id="search">
-      <input type="text" value="Search" onFocus="if (this.value=='Search') { this.value = '' } else if (this.value=='') { this.value='Search' }" onBlur="if (this.value=='Search') { this.value = '' } else if (this.value=='') { this.value='Search' }" />
+      <input type="text" value="Search" onFocus="if (this.value=='Search') { this.value = '' } else if (this.value=='') { this.value='Search' }" onBlur="if (this.value=='') { this.value='Search' }" />
       <input type="submit" value="Go!" />
     </form>
   </header>
