--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="dates"><span class="date">16</span><span class="month">Mar</span></div>
     <h2>Cutest Kitteh Evah!</h2>
     <h3>And so much personality, too!</h3>
-    <h4>by Tom Wolfe</h4>
+    <h4>by <span class="author">Tom Wolfe</span></h4>
     <section>
       <div class="img-holder"><img src="images/j-begs1.jpg" width="328" height="400" alt="Cutest Kitteh Evah!" /><span class="img-caption">So cute!</span></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut felis lorem. Quisque odio lectus, venenatis at ultricies at, eleifend at dui. Nam dignissim dui vitae tincidunt laoreet. Mauris tristique magna est, vel placerat massa rhoncus sed. Ut fringilla leo id quam elementum imperdiet. Nam ac leo urna. Etiam quis accumsan purus. Pellentesque ut mi aliquam dui dictum iaculis eget sed nulla. Mauris ac ligula imperdiet, venenatis sapien quis, tincidunt neque. Cras imperdiet arcu ac erat lobortis, vel dignissim urna luctus. Etiam quam nisi, feugiat non ante eu, hendrerit venenatis ante.</p>
